[tool.poetry]
name = "vertex"
version = "0.9.0"
description = "A http/udp bittorrent tracker in Python"
authors = ["tbwcjw"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.2"
pydantic = "^2.11.5"
Flask = "^3.1.1"
requests = "^2.32.3"
schedule = "^1.2.2"
waitress = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
